--- a/static/src/sass/blocks/table.scss
+++ b/static/src/sass/blocks/table.scss
@@ -119,6 +119,7 @@ category: Tables
 
   thead {
     background: #4b545f;
+    box-shadow: 0 10px 10px rgba(0,0,0,.1)
   }
 
   tbody {
@@ -166,12 +167,15 @@ category: Tables
     color: #fff;
     font-size: 10px;
     font-weight: 400;
-    padding: 5px 0px 5px 10px;
+    padding: 5px 0px 5px 5px;
     text-transform: uppercase;
     text-align: left;
 
     &.table__sortable {
       cursor: pointer;
+      &.padfix{
+        padding-left: 10px;
+      }
     }
 
     &.active {
